--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		
-		<link rel="icon" href="images/favicon.ico">
+		<link rel="icon" href="images/favicon.ico?">
 	</head>
 	<body class="is-preload landing">
 		<div id="page-wrapper">
