--- a/index.html
+++ b/index.html
@@ -16,20 +16,19 @@
 			<!-- Header -->
 
 				<header id="header">
-					<h1 id="logo" style="font-size: 28px; font-weight: bold; color: #f2a96d;"><a href="#one">FORSA</a></h1>
+					<h1 id="logo" style="font-size: 38px; font-weight: bold; color: #f2a96d;"><a href="#one">FORSA</a></h1>
 					<nav id="nav">
+		  			<ul>	
+						<li>
+							<a href="#two">Business Plan</a>
 						<ul>
-							
-							<li>
-								<a href="#two">Business Plan</a>
-								<ul>
-									<li><a href="#two">Etude de Marché</a></li>
-									<li><a href="#three">Etude Financière</a></li>
-								</ul>
-							</li>
+							<li><a href="#two">Etude de Marché</a></li>
+							<li><a href="#three">Etude Financière</a></li>
+						</ul>
+						</li>
 							<li><a href="#four">Nos Offres</a></li>
 							<li><a href="#footer" class="button primary">Contactez-nous</a></li>
-						</ul>
+					</ul>
 					</nav>
 				</header>
 
@@ -175,10 +174,10 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons"> 
-						<li style="color: #f2a96d;"><a href="https://www.facebook.com/Forsa-102909298868055" class="icon brands alt fa-facebook-f"><span tyle="color: #f2a96d;" class="label">Facebook</span></a></li>
-						<li><a tyle="color: #f2a96d;" href="https://www.instagram.com/forsa.space/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://wa.me/+212601295700" class="icon brands alt fa-whatsapp"><span class="label">WhatsApp</span></a></li>
-						<li><a href="https://mail.google.com/mail/u/2/#inbox?compose=GTvVlcSBmWwScRkSvcHPQFfzQLkrdNwlJTnMXZcrsDtbCkDFnSRNpxBCsgxvpWGrTPDcxJkWHxQSG" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<li style="color: #f2a96d;"><a href="https://www.facebook.com/Forsa-102909298868055" class="icon brands alt fa-facebook-f" target = ”_blank”><span tyle="color: #f2a96d;" class="label">Facebook</span></a></li>
+						<li><a tyle="color: #f2a96d;" href="https://www.instagram.com/forsa.space/" class="icon brands alt fa-instagram"><span class="label" target = ”_blank”>Instagram</span></a></li>
+						<li><a href="https://wa.me/+212601295700" class="icon brands alt fa-whatsapp"><span class="label" target = ”_blank”>WhatsApp</span></a></li>
+						<li><a href="https://mail.google.com/mail/u/2/#inbox?compose=GTvVlcSBmWwScRkSvcHPQFfzQLkrdNwlJTnMXZcrsDtbCkDFnSRNpxBCsgxvpWGrTPDcxJkWHxQSG" class="icon solid alt fa-envelope" target = ”_blank”><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Copyright 2021</li><li>FORSA</li>
