--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<nav id="nav">
 		  			<ul>	
 						<li>
-							<a href="#two">Business Plan</a>
+							<a href="#two" style="font-size: 38px; font-weight: bold;">Business Plan</a>
 						<ul>
 							<li><a href="#two">Etude de Marché</a></li>
 							<li><a href="#three">Etude Financière</a></li>
