--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 					<nav id="nav">
 		  			<ul>	
 						<li>
-							<a href="#two">Business Plan</a>
+							<a href="#two" style="font-size: 23px;">Business Plan</a>
 						<ul>
-							<li><a href="#two">Etude de Marché</a></li>
-							<li><a href="#three">Etude Financière</a></li>
+							<li><a href="#two" style="font-size: 23px;">Etude de Marché</a></li>
+							<li><a href="#three" style="font-size: 23px;">Etude Financière</a></li>
 						</ul>
 						</li>
-							<li><a href="#four">Nos Offres</a></li>
-							<li><a href="#footer">Contactez-nous</a></li>
+							<li><a href="#four" style="font-size: 23px;">Nos Offres</a></li>
+							<li><a href="#footer" style="font-size: 23px;" class="button primary">Contactez-nous</a></li>
 					</ul>
 					</nav>
 				</header>
