--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
 			<!-- Header -->
 
 				<header id="header">
+					<br/>
 					<h1 id="logo" style="font-size: 28px; font-weight: bold; color: #f2a96d;"><a href="#one">FORSA</a></h1>
 					<nav id="nav">
 		  			<ul>	
 						<li>
 							<a href="#two" style="font-size: 20px; font-weight: bold;">Business Plan</a>
 						<ul>
-							<li><a href="#two" style="font-size: 20px;">Etude de Marché</a></li>
-							<li><a href="#three" style="font-size: 20px;">Etude Financière</a></li>
+							<li><a href="#two" style="font-size: 18px; font-weight: bold;">Etude de Marché</a></li>
+							<li><a href="#three" style="font-size: 18px; font-weight: bold;">Etude Financière</a></li>
 						</ul>
 						</li>
-							<li><a href="#four" style="font-size: 20px;">Nos Offres</a></li>
+							<li><a href="#four" style="font-size: 20px; font-weight: bold;">Nos Offres</a></li>
 							<li><a href="#footer" style="font-size: 18px;" class="button primary">Contactez-nous</a></li>
 					</ul>
 					</nav>
