--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						</ul>
 						</li>
 							<li><a href="#four" style="font-size: 20px; font-weight: bold;">Nos Offres</a></li>
-							<li><a href="#footer" style="font-size: 18px;" class="button primary">Contactez-nous</a></li>
+							<li><a href="#footer" style="font-size: 18px;" class="button primary" font-weight: bold;>Contactez-nous</a></li>
 					</ul>
 					</nav>
 				</header>
