--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons"> 
-						<li style="color: #f2a96d;"><a href="https://www.facebook.com/Forsa-102909298868055" class="icon brands alt fa-facebook-f" target = ”_blank”><span tyle="color: #f2a96d;" class="label">Facebook</span></a></li>
-						<li><a tyle="color: #f2a96d;" href="https://www.instagram.com/forsa.space/" class="icon brands alt fa-instagram"><span class="label" target = ”_blank”>Instagram</span></a></li>
-						<li><a href="https://wa.me/+212601295700" class="icon brands alt fa-whatsapp"><span class="label" target = ”_blank”>WhatsApp</span></a></li>
+						<li style="color: #f2a96d;"><a href="https://www.facebook.com/Forsa-102909298868055" class="icon brands alt fa-facebook-f" target = ”_blank”><span style="color: #f2a96d;" class="label">Facebook</span></a></li>
+						<li><a style="color: #f2a96d;" href="https://www.instagram.com/forsa.space/" class="icon brands alt fa-instagram"  target = ”_blank”><span class="label">Instagram</span></a></li>
+						<li><a href="https://wa.me/+212601295700" class="icon brands alt fa-whatsapp"  target = ”_blank”><span class="label">WhatsApp</span></a></li>
 						<li><a href="https://mail.google.com/mail/u/2/#inbox?compose=CllgCJqVNfDrrsHgCnwNGwKcTBqjmWhFBHzRqFHRPNNQvggMRkstZrdTkPPcwwCsDZjqtDCPLZg" class="icon solid alt fa-envelope" target = ”_blank”><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
